<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/container_margin"
    tools:context=".MainActivity"
    android:background="@color/light_gray"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            style="@style/ViewStyle"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_text"
                style="@style/TextViewCategoryStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_text"
                style="@style/TextViewStatusStyle"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/DividerStyle"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/LinearLayoutStyle"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/created_text"
                    style="@style/LeftTextViewStyle"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/created_date_text"
                    style="@style/RightTextViewStyle"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/DividerStyle"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LinearLayoutStyle"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/registered_text"
                    android:layout_weight="2"
                    style="@style/LeftTextViewStyle"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/registered_text_date"
                    style="@style/RightTextViewStyle"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/DividerStyle"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LinearLayoutStyle"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/deadline_text"
                    style="@style/LeftTextViewStyle"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:text="@string/deadline_text_date"
                    style="@style/RightTextViewStyle"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/DividerStyle"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LinearLayoutStyle"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/responsible_text"
                    style="@style/LeftTextViewStyle"
                    />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/responsible_text_date"
                    style="@style/RightTextViewStyle"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/DividerStyle"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/problem_text"
                style="@style/TextViewProblemTextStyle"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_images"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
